--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <version>4.18</version>
         <relativePath />
     </parent>
-    <groupId>org.jenkins-ci.plugins</groupId>
+    <groupId>io.jenkins.plugins</groupId>
     <artifactId>durable-task-lib</artifactId>
     <packaging>jar</packaging>
     <version>${revision}${changelist}</version>
