--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>plugin</artifactId>
-        <version>4.18</version>
+        <groupId>org.jenkins-ci</groupId>
+        <artifactId>jenkins</artifactId>
+        <version>1.63</version>
         <relativePath />
     </parent>
     <groupId>io.jenkins.plugins</groupId>
@@ -73,7 +73,10 @@
 
     <profiles>
         <profile>
-            <id>linux</id>
+            <id>bash</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <properties>
                 <binary.generation.script>docker-generate-binaries.sh</binary.generation.script>
             </properties>
