set BUILD_KIT flag, change from ADD to COPY

--- a/src/Dockerfile.linux
+++ b/src/Dockerfile.linux
@@ -6,8 +6,8 @@ FROM golang:1.16.4-buster AS builder
 ARG BASE_DIR
 ARG NAME
 ARG VERSION
-ADD cmd $BASE_DIR/cmd
-ADD pkg $BASE_DIR/pkg
+COPY cmd $BASE_DIR/cmd
+COPY pkg $BASE_DIR/pkg
 WORKDIR $BASE_DIR/pkg/common
 RUN go mod tidy
 RUN go test -v
