--- a/pom.xml
+++ b/pom.xml
@@ -65,9 +65,9 @@
     </pluginRepositories>
 
     <scm>
-        <connection>scm:git:git://github.com/${gitHubRepo}.git</connection>
-        <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
-        <url>https://github.com/${gitHubRepo}</url>
+        <connection>scm:git:git://github.com/jenkinsci/lib-durable-task.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/jenkinsci/lib-durable-task.git</developerConnection>
+        <url>https://github.com/jenkinsci/lib-durable-task</url>
         <tag>${scmTag}</tag>
     </scm>
 
